--- a/data-analyst.html
+++ b/data-analyst.html
@@ -89,7 +89,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/database-analyst-ii-13048'>Database Analyst II - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/database-analyst-ii-13048'>Database Analyst II - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -145,7 +145,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Apply online for the job of Game Data Analyst at SYBO Games.</p>
 <hr/>
-<h5><a href='https://stuart.workable.com/j/3D3DEEAB92?viewed=true'>Stuart - Jobs: Operations Data Analyst Intern (new business unit ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stuart.workable.com/j/3D3DEEAB92?viewed=true'>Stuart - Jobs: Operations Data Analyst Intern (new business unit ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Operations Data Analyst Intern (new business unit) at 
 Stuart.</p>
@@ -201,7 +201,7 @@ application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
 <p>3 days ago ... If yes, do you have any reason to believe that your acceptance of employment 
 from Ironclad Technology Services would breach or violate any non-compete?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -276,15 +276,15 @@ not subject you to adverse treatment). Our company values diversity.</p>
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/EA28F2A1FE'>Datatonic - Jobs: BI Analyst - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/EA28F2A1FE'>Datatonic - Jobs: BI Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Stockholm Stockholm Stockholm London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/analyst-v-healthcare-reporting-data-analysis-6252'>Analyst V Healthcare Reporting/Data Analysis - Florida Blue Careers</a></h5> 
+<h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/analyst-v-healthcare-reporting-data-analysis-6252'>Analyst V Healthcare Reporting/Data Analysis - Florida Blue Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://ellaktor.workable.com/jobs/1076217'>Jobs: Monitoring - Data Analyst / Engineer - AKTOR SA ... - Ellaktor</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ellaktor.workable.com/jobs/1076217'>Jobs: Monitoring - Data Analyst / Engineer - AKTOR SA ... - Ellaktor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Apply online for the job of Monitoring - Data Analyst / Engineer - AKTOR SA at 
 Ellaktor.</p>
@@ -309,7 +309,7 @@ Ellaktor.</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/riskspan/job/oD7zafwd'>RiskSpan Careers - Data Analyst / Financial Analyst - Charleston</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/riskspan/job/oD7zafwd'>RiskSpan Careers - Data Analyst / Financial Analyst - Charleston</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Data Analyst / Financial Analyst - Charleston. 02 Data Management Charleston, 
 South Carolina. Apply. Description. Description. Want to be a part of a growing?...</p>
@@ -351,11 +351,11 @@ South Carolina. Apply. Description. Description. Want to be a part of a growing?
 <p>Jul 9, 2019 ... Apply online for the job of Senior Research and Statistical Analyst - Demography 
 at BAME Recruitment Limited.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/6D14B7DD18'>WWC - Jobs: Senior Data Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/6D14B7DD18'>WWC - Jobs: Senior Data Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Apply online for the job of Senior Data Analyst at WWC.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/2E1EFD372F?viewed=true'>Girteka Logistics - Jobs: Data Analyst - Apply online</a></h5> 
+<h5><a href='https://workable.com/j/2E1EFD372F?viewed=true'>Girteka Logistics - Jobs: Data Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Data Analyst at Girteka Logistics.</p>
 <hr/>
@@ -395,11 +395,11 @@ at BAME Recruitment Limited.</p>
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/shorelight/job/okaxafwV'>Shorelight Education Careers - Shorelight Education ? Data Analyst I</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/shorelight/job/okaxafwV'>Shorelight Education Careers - Shorelight Education ? Data Analyst I</a></h5> 
 <p><span class="badge badge-light">Boston,</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/shorelight/job/oz8xafw8'>Shorelight Education Careers - Shorelight ? Senior Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/shorelight/job/oz8xafw8'>Shorelight Education Careers - Shorelight ? Senior Data Analyst</a></h5> 
 <p><span class="badge badge-light">Boston,</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -421,7 +421,7 @@ interpreting data; Transform data to information that will facilitate decision m
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692071562-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692071562-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -438,7 +438,7 @@ interpreting data; Transform data to information that will facilitate decision m
 <p>Jul 10, 2019 ... Experian is recruiting a Data Analyst to join our Data Science Team based in 
 Nottingham.The Data Science Team build and maintain many of Experian...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/tech-svcs-database-analyst-25105'>Tech Svcs, Database Analyst - ELSEVIER Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/tech-svcs-database-analyst-25105'>Tech Svcs, Database Analyst - ELSEVIER Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... The Database Analyst is a member of the Customer Success team, providing 
 support for any customer licensing a Clinical Solutions product. In this...</p>
