--- a/devops.html
+++ b/devops.html
@@ -46,7 +46,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
+<h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -115,7 +115,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/oSYu9fwd'>Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/oSYu9fwd'>Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -135,7 +135,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://workforcesource.recruiterbox.com/jobs/fk03f4v'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://workforcesource.recruiterbox.com/jobs/fk03f4v'>
     0723 - Sr DevOps Engineer at Workforce Source
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -159,7 +159,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://gengo.applytojob.com/apply/DwbfcYubnm/Operations-Engineer-DevOps'>Operations Engineer (DevOps) - Gengo - Career Page</a></h5> 
+<h5><a href='http://gengo.applytojob.com/apply/DwbfcYubnm/Operations-Engineer-DevOps'>Operations Engineer (DevOps) - Gengo - Career Page</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -323,7 +323,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://chilipublish.recruitee.com/o/qa-engineer-devops-specialist'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chilipublish.recruitee.com/o/qa-engineer-devops-specialist'>
       QA Engineer / DevOps Specialist - CHILI publish
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -338,7 +338,7 @@ published: 08.03.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://twincap.join.com/jobs/260855-devops-engineer-senior-devops-engineer'>Job @ TwinCap (Z?rich): DevOps Engineer / Senior D... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/260855-devops-engineer-senior-devops-engineer'>Job @ TwinCap (Z?rich): DevOps Engineer / Senior D... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 4 Tagen ... TwinCap GmbH has a job opening for DevOps Engineer / Senior DevOps 
 Engineer in Z?rich (published: 19.07.2019). Apply now or check the other 
@@ -367,7 +367,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p>5 days ago ... ... Fortune 1000 and Middle Market brands acquire, retain and grow customer 
 relationships through actionable data, advanced analytics and machine learning.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/devops-strategic-advisor-6482'>DevOps Strategic Advisor - MITRE Careers</a></h5> 
+<h5><a href='https://mitre.referrals.selectminds.com/jobs/devops-strategic-advisor-6482'>DevOps Strategic Advisor - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -432,13 +432,13 @@ on the AWS platform, as well as crafting and implementing infrastructure as?...<
 <p><span class="badge badge-light">?le-de-France, France Paris Madrid Milan</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://lumc.recruitee.com/l/nl/o/devops-engineer-d19mvmp19'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lumc.recruitee.com/l/nl/o/devops-engineer-d19mvmp19'>
       DEVOPS Engineer (D.19.MV.MP.19) - LUMC
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/meilleursagents/65418c29-3ea3-4db8-8baf-db794f1bdf87'>MeilleursAgents - DevOps engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/meilleursagents/65418c29-3ea3-4db8-8baf-db794f1bdf87'>MeilleursAgents - DevOps engineer</a></h5> 
 <p><span class="badge badge-light">Ile de France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -464,7 +464,7 @@ on the AWS platform, as well as crafting and implementing infrastructure as?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
